--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
 <body>
     <header>comidas do mar</header>
     <h1>comidas maritimas: comidas diferentes que vem do mar</h1>
-    <p#>comidas do mar</p>
+    <p>#comidas do mar</p>
 </body>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UspDttvSvkM?si=aKqlgeCpNBn5d4IZ"
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h2>as melhores comidas do mar</h2>
+    <div class="categoria vídeos">
+      <a href="https://www.youtube.com/watch?v=LkMvOFiEJng"&gt;
+      <img { height="150px" src="https://img.youtube.com/vi/LkMvOFiEJng/maxresdefault.jpg; />  
+   </a>
+     </div>
+    <div class="categoria vídeos">
+      <a href="https://www.youtube.com/watch?v=kNUUnR0F2tg"&gt;
+      <img { height="150px" src="https://img.youtube.com/vi/kNUUnR0F2tg/maxresdefault.jpg; />  
+   </a>
+     </div>
