--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head> 
     <title>comidas do mar</title>
 </head>
 
@@ -22,3 +24,4 @@
       <img { height="150px" src="https://img.youtube.com/vi/kNUUnR0F2tg/maxresdefault.jpg; />  
    </a>
      </div>
+     </html>
