--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head> 
-    <title>comidas do mar</title>
+<link rel="stylesheet" href="style.css">   
+  <title>comidas do mar</title>
 </head>
 
 <body>
