--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>as melhores comidas do mar</h2>
     <div class="categoria vídeos">
-      <a href="https://www.youtube.com/watch?v=LkMvOFiEJng"&gt;
-      <img { height="150px" src="https://img.youtube.com/vi/LkMvOFiEJng/maxresdefault.jpg; />  
-   </a>
+      <a href="https://www.youtube.com/watch?v=LkMvOFiEJng">
+      <img { height="150px" src="https://img.youtube.com/vi/LkMvOFiEJng/maxresdefault.jpg" />
+      </a>
      </div>
     <div class="categoria vídeos">
       <a href="https://www.youtube.com/watch?v=kNUUnR0F2tg"&gt;
-      <img { height="150px" src="https://img.youtube.com/vi/kNUUnR0F2tg/maxresdefault.jpg; />  
+      <img { height="150px" src="https://img.youtube.com/vi/kNUUnR0F2tg/maxresdefault.jpg" />  
    </a>
      </div>
      </html>
